# fw-sandbox

./: .clang-format  CMakeLists.txt  LICENSE  LICENSE.md  README.md
code/: CMakeLists.txt
code/game/: CMakeLists.txt  compat.h  frame.cpp  frame.h  main.cpp  player.cpp  player.h  scenery.cpp  scenery.h
code/server/: CMakeLists.txt  main.cpp  server.h
code/server/src/: main.cpp
code/server/src/core/: server.cpp  server.h
code/server/src/core/builtins/: builtins.h  player.h  vehicle.h  world.h
code/server/src/core/modules/: environment.cpp  environment.h  human.cpp  human.h  vehicle.cpp  vehicle.h
code/shared/: version.cpp.in  version.h
code/shared/game_rpc/: add_weapon.h  set_vehicledata.h
code/shared/game_rpc/human/: human_changeskin.h  human_death.h  human_reload.h  human_setprops.h  human_shoot.h
code/shared/messages/: messages.h
code/shared/messages/human/: human_despawn.h  human_self_update.h  human_spawn.h  human_update.h
code/shared/messages/vehicle/: vehicle_despawn.h  vehicle_owner_update.h  vehicle_spawn.h  vehicle_update.h
code/shared/modules/: human_sync.hpp  mod.hpp  vehicle_sync.hpp
code/shared/rpc/: chat_message.h
resources/test/: index.js  package.json
vendors/: CMakeLists.txt
vendors/wicked/Editor/: CMakeLists.txt
vendors/wicked/Example_ImGui_Docking/ImGui/: imgui_impl_sdl.cpp
vendors/wicked/WickedEngine/: CMakeLists.txt
